[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/static/Inter-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/static/Inter-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Offline.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 22
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Offline" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1533.0
margin_bottom = 905.0
rect_scale = Vector2( 0.4, 0.4 )
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 142.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 432.0
margin_top = 159.0
margin_right = 592.0
margin_bottom = 299.0

[node name="Username" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 4 )
max_length = 10
placeholder_text = "Username..."

[node name="IP" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 64.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 4 )
placeholder_text = "IP..."

[node name="Server" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 160.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "SERVER"

[node name="ServerErr" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 106.0
margin_right = 160.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.972549, 0.435294, 0.576471, 1 )
custom_fonts/font = SubResource( 4 )
text = "Server alr on port"

[node name="Client" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 160.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "CLIENT"

[node name="ClientErr" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 144.0
margin_right = 160.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.972549, 0.435294, 0.576471, 1 )
custom_fonts/font = SubResource( 4 )
text = "Server inaccessible"

[node name="ClientErr2" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 144.0
margin_right = 160.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.972549, 0.435294, 0.576471, 1 )
custom_fonts/font = SubResource( 4 )
text = "Need a username"

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 238.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 417.0
margin_top = 88.0
margin_right = 606.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 3 )
text = "grapple"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Server" to="." method="_on_Server_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Client" to="." method="_on_Client_pressed"]
